// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Emailer Class email snapshots sendPasswordResetEmail 1`] = `
Object {
  "envelope": Object {
    "from": "tradebot@flexfoxfantasy.com",
    "to": Array [
      "test@example.com",
    ],
  },
  "originalMessage": Object {
    "attachments": Array [],
    "from": "tradebot@flexfoxfantasy.com",
    "html": "<!DOCTYPE html PUBLIC \\"-//W3C//DTD XHTML 1.0 Strict//EN\\" \\"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd\\">
<html xmlns=\\"http://www.w3.org/1999/xhtml\\" style=\\"height: 100%; background: #f7f7f7;\\">
  <head>
    <meta charset=\\"utf-8\\">
    <meta name=\\"viewport\\" content=\\"width=device-width; initial-scale=1.0;\\">
    <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\">
    <meta name=\\"x-apple-disable-message-reformatting\\">
    
    <style>
@media screen and (max-width: 600px) {
  u + .body {
    width: 100vw !important;
  }
}
</style>
    <style>
a.button-link {
  background-color: #3b459a;
  display: inline-block;
  border: 2px solid transparent;
  color: #fafafa;
  padding: calc(.375em - 1px) .75em;
  text-align: center;
  white-space: nowrap;
  cursor: pointer;
  border-radius: 4px;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.4);
  font-size: 1rem;
  text-decoration: none;
  white-space: nowrap;
  height: 1.5em;
  vertical-align: top;
  line-height: 1.5;
}
@media only screen and (max-width:700px) {
  .main,
.header,
.footer {
    width: 100% !important;
  }

  .main .container h1 {
    font-size: 1.8rem !important;
  }

  a.button-link {
    margin: 1rem 0 !important;
    text-decoration: underline !important;
  }
}
</style>
    <link href=\\"./reset_password/styles.css\\" rel=\\"stylesheet\\">
    <title>Trade Machine Password Reset</title>
  </head>
  <body style=\\"font-family: -apple-system, BlinkMacSystemFont, Roboto, Helvetica, Arial, sans-serif; font-size: 16px; color: black; height: 100%; background: #f7f7f7;\\">
    <header class=\\"title\\" style=\\"height: 100px; background-color: #a9c07c; background-image: url('https://imgur.com/VKEupAm.jpg'); background-size: cover; background-position: center center; background-repeat: no-repeat; width: 75%; margin: auto;\\"></header>
    <div class=\\"main\\" style=\\"height: 80%; background: #fff; width: 75%; margin-left: auto; margin-right: auto;\\">
      <div class=\\"container\\" style=\\"width: 70%; margin-left: 10%; padding: 5% 0;\\">
        <h1 style=\\"line-height: initial; margin: 0.67em 0; padding: 0; color: #3b459a; font-weight: 600; font-size: 3rem; font-family: 'Lucida Grande', 'Montserrat', 'Roboto', monospace;\\">TradeMachine</h1>
        <h2>Forgot Your Password?</h2>
        <p style=\\"line-height: 1.6em; margin: 1em 0;\\">Hi Jatheesh, you are receiving this email because you have requested a password reset for your account. <br><br></p>
        <p style=\\"line-height: 1.6em; margin: 1em 0;\\">Please click on the following link to complete the process:</p><a class=\\"button-link\\" href=\\"http://localhost:8080/reset_password?u=random-token\\" style=\\"background-color: #3b459a; display: inline-block; border: 2px solid transparent; color: #fafafa; padding: calc(.375em - 1px) .75em; text-align: center; white-space: nowrap; cursor: pointer; border-radius: 4px; box-shadow: 0 1px 3px rgba(0, 0, 0, 0.4); font-size: 1rem; text-decoration: none; white-space: nowrap; height: 1.5em; vertical-align: top; line-height: 1.5;\\"><span>Reset Password</span></a>
        <div class=\\"divider\\"></div>
      </div>
    </div>
    <footer style=\\"height: 5%; background: #4b528b; width: 75%; margin-left: auto; margin-right: auto;\\"></footer>
  </body>
</html>",
    "subject": "FlexFoxFantasy TradeMachine - Password reset for Flex Fox Fantasy League TradeMachine",
    "text": " TRADEMACHINE
FORGOT YOUR PASSWORD?
Hi Jatheesh, you are receiving this email because you have requested a password
reset for your account. 



Please click on the following link to complete the process:

Reset Password [http://localhost:8080/reset_password?u=random-token]",
    "to": "test@example.com",
  },
}
`;

exports[`Emailer Class email snapshots sendRegistrationEmail 1`] = `
Object {
  "envelope": Object {
    "from": "tradebot@flexfoxfantasy.com",
    "to": Array [
      "test@example.com",
    ],
  },
  "originalMessage": Object {
    "attachments": Array [],
    "from": "tradebot@flexfoxfantasy.com",
    "html": "<!DOCTYPE html PUBLIC \\"-//W3C//DTD XHTML 1.0 Strict//EN\\" \\"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd\\">
<html xmlns=\\"http://www.w3.org/1999/xhtml\\" style=\\"height: 100%; background: #f7f7f7;\\">
  <head>
    <meta charset=\\"utf-8\\">
    <meta name=\\"viewport\\" content=\\"width=device-width; initial-scale=1.0;\\">
    <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\">
    <meta name=\\"x-apple-disable-message-reformatting\\">
    
    <style>
@media screen and (max-width: 600px) {
  u + .body {
    width: 100vw !important;
  }
}
</style>
    <style>
a.button-link {
  background-color: #3b459a;
  display: inline-block;
  border: 2px solid transparent;
  color: #fafafa;
  padding: calc(.375em - 1px) .75em;
  text-align: center;
  white-space: nowrap;
  cursor: pointer;
  border-radius: 4px;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.4);
  font-size: 1rem;
  text-decoration: none;
  white-space: nowrap;
  height: 1.5em;
  vertical-align: top;
  line-height: 1.5;
}
@media only screen and (max-width:700px) {
  .main,
.header,
.footer {
    width: 100% !important;
  }

  .main .container h1 {
    font-size: 1.8rem !important;
  }

  a.button-link {
    margin: 1rem 0 !important;
    text-decoration: underline !important;
  }
}
</style>
    <link href=\\"./registration_email/styles.css\\" rel=\\"stylesheet\\">
    <title>Trade Machine Registration Invite</title>
  </head>
  <body style=\\"font-family: -apple-system, BlinkMacSystemFont, Roboto, Helvetica, Arial, sans-serif; font-size: 16px; color: black; height: 100%; background: #f7f7f7;\\">
    <header class=\\"title\\" style=\\"height: 100px; background-color: #a9c07c; background-image: url('https://imgur.com/VKEupAm.jpg'); background-size: cover; background-position: center center; background-repeat: no-repeat; width: 75%; margin: auto;\\"></header>
    <div class=\\"main\\" style=\\"height: 80%; background: #fff; width: 75%; margin-left: auto; margin-right: auto;\\">
      <div class=\\"container\\" style=\\"width: 70%; margin-left: 10%; padding: 5% 0;\\">
        <h1 style=\\"line-height: initial; margin: 0.67em 0; padding: 0; color: #3b459a; font-weight: 600; font-size: 3rem; font-family: 'Lucida Grande', 'Montserrat', 'Roboto', monospace;\\">TradeMachine</h1>
        <h2>Invitation to Register</h2>
        <p style=\\"line-height: 1.6em; margin: 1em 0;\\">Hi Jatheesh, you have been invited to register on Trade Machine. This will allow you to submit trades with other members of the Flex Fox Fantasy Baseball League.</p>
        <p style=\\"line-height: 1.6em; margin: 1em 0;\\">Please click on the following link to complete the process:</p><a class=\\"button-link\\" href=\\"http://localhost:8080/register?e=dGVzdEBleGFtcGxlLmNvbQ==\\" style=\\"background-color: #3b459a; display: inline-block; border: 2px solid transparent; color: #fafafa; padding: calc(.375em - 1px) .75em; text-align: center; white-space: nowrap; cursor: pointer; border-radius: 4px; box-shadow: 0 1px 3px rgba(0, 0, 0, 0.4); font-size: 1rem; text-decoration: none; white-space: nowrap; height: 1.5em; vertical-align: top; line-height: 1.5;\\"><span>Register</span></a>
        <div class=\\"divider\\"></div>
      </div>
    </div>
    <footer style=\\"height: 5%; background: #4b528b; width: 75%; margin-left: auto; margin-right: auto;\\"></footer>
  </body>
</html>",
    "subject": "FlexFoxFantasy TradeMachine - You have been invited to register on FFF Trade Machine",
    "text": " TRADEMACHINE
INVITATION TO REGISTER
Hi Jatheesh, you have been invited to register on Trade Machine. This will allow
you to submit trades with other members of the Flex Fox Fantasy Baseball League.

Please click on the following link to complete the process:

Register [http://localhost:8080/register?e=dGVzdEBleGFtcGxlLmNvbQ==]",
    "to": "test@example.com",
  },
}
`;

exports[`Emailer Class email snapshots sendTestEmail 1`] = `
Object {
  "envelope": Object {
    "from": "tradebot@flexfoxfantasy.com",
    "to": Array [
      "test@example.com",
    ],
  },
  "originalMessage": Object {
    "attachments": Array [],
    "from": "tradebot@flexfoxfantasy.com",
    "html": "<!DOCTYPE html PUBLIC \\"-//W3C//DTD XHTML 1.0 Strict//EN\\" \\"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd\\">
<html xmlns=\\"http://www.w3.org/1999/xhtml\\" style=\\"height: 100%; background: #f7f7f7;\\">
  <head>
    <meta charset=\\"utf-8\\">
    <meta name=\\"viewport\\" content=\\"width=device-width; initial-scale=1.0;\\">
    <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\">
    <meta name=\\"x-apple-disable-message-reformatting\\">
    
    <style>
@media screen and (max-width: 600px) {
  u + .body {
    width: 100vw !important;
  }
}
</style>
    <style>
a.button-link {
  background-color: #3b459a;
  display: inline-block;
  border: 2px solid transparent;
  color: #fafafa;
  padding: calc(.375em - 1px) .75em;
  text-align: center;
  white-space: nowrap;
  cursor: pointer;
  border-radius: 4px;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.4);
  font-size: 1rem;
  text-decoration: none;
  white-space: nowrap;
  height: 1.5em;
  vertical-align: top;
  line-height: 1.5;
}
@media only screen and (max-width:700px) {
  .main,
.header,
.footer {
    width: 100% !important;
  }

  .main .container h1 {
    font-size: 1.8rem !important;
  }

  a.button-link {
    margin: 1rem 0 !important;
    text-decoration: underline !important;
  }
}
</style>
    <title>Trade Machine Test Email</title>
  </head>
  <body style=\\"font-family: -apple-system, BlinkMacSystemFont, Roboto, Helvetica, Arial, sans-serif; font-size: 16px; color: black; height: 100%; background: #f7f7f7;\\">
    <header class=\\"title\\" style=\\"height: 100px; background-color: #a9c07c; background-image: url('https://imgur.com/VKEupAm.jpg'); background-size: cover; background-position: center center; background-repeat: no-repeat; width: 75%; margin: auto;\\"></header>
    <div class=\\"main\\" style=\\"height: 80%; background: #fff; width: 75%; margin-left: auto; margin-right: auto;\\">
      <div class=\\"container\\" style=\\"width: 70%; margin-left: 10%; padding: 5% 0;\\">
        <h1 style=\\"line-height: initial; margin: 0.67em 0; padding: 0; color: #3b459a; font-weight: 600; font-size: 3rem; font-family: 'Lucida Grande', 'Montserrat', 'Roboto', monospace;\\">TradeMachine</h1>
        <h2>Testing... Testing...</h2>
        <p style=\\"line-height: 1.6em; margin: 1em 0;\\">Hi Jatheesh, this is a test email.</p>
      </div>
    </div>
    <footer style=\\"height: 5%; background: #4b528b; width: 75%; margin-left: auto; margin-right: auto;\\"></footer>
  </body>
</html>",
    "subject": "FlexFoxFantasy TradeMachine - Test Email",
    "text": " TRADEMACHINE
TESTING... TESTING...
Hi Jatheesh, this is a test email.",
    "to": "test@example.com",
  },
}
`;

exports[`Emailer Class email snapshots sendTradeRequestEmail 1`] = `
Object {
  "envelope": Object {
    "from": "tradebot@flexfoxfantasy.com",
    "to": Array [
      "test@example.com",
    ],
  },
  "originalMessage": Object {
    "attachments": Array [],
    "from": "tradebot@flexfoxfantasy.com",
    "html": "<!DOCTYPE html PUBLIC \\"-//W3C//DTD XHTML 1.0 Strict//EN\\" \\"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd\\">
<html xmlns=\\"http://www.w3.org/1999/xhtml\\" style=\\"height: 100%; background: #f7f7f7;\\">
  <head>
    <meta charset=\\"utf-8\\">
    <meta name=\\"viewport\\" content=\\"width=device-width; initial-scale=1.0;\\">
    <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\">
    <meta name=\\"x-apple-disable-message-reformatting\\">
    
    <style>
@media screen and (max-width: 600px) {
  u + .body {
    width: 100vw !important;
  }
}
</style>
    <style>
a.button-link {
  background-color: #3b459a;
  display: inline-block;
  border: 2px solid transparent;
  color: #fafafa;
  padding: calc(.375em - 1px) .75em;
  text-align: center;
  white-space: nowrap;
  cursor: pointer;
  border-radius: 4px;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.4);
  font-size: 1rem;
  text-decoration: none;
  white-space: nowrap;
  height: 1.5em;
  vertical-align: top;
  line-height: 1.5;
}
@media only screen and (max-width:700px) {
  .main,
.header,
.footer {
    width: 100% !important;
  }

  .main .container h1 {
    font-size: 1.8rem !important;
  }

  a.button-link {
    margin: 1rem 0 !important;
    text-decoration: underline !important;
  }
}
</style>
    <style>
.button-container a.button-link {
  margin-right: 2rem !important;
}
</style>
    <title></title>
  </head>
  <body style=\\"font-family: -apple-system, BlinkMacSystemFont, Roboto, Helvetica, Arial, sans-serif; font-size: 16px; color: black; height: 100%; background: #f7f7f7;\\">
    <header class=\\"title\\" style=\\"height: 100px; background-color: #a9c07c; background-image: url('https://imgur.com/VKEupAm.jpg'); background-size: cover; background-position: center center; background-repeat: no-repeat; width: 75%; margin: auto;\\"></header>
    <div class=\\"main\\" style=\\"height: 80%; background: #fff; width: 75%; margin-left: auto; margin-right: auto;\\">
      <div class=\\"container\\" style=\\"width: 70%; margin-left: 10%; padding: 5% 0;\\">
        <h1 style=\\"line-height: initial; margin: 0.67em 0; padding: 0; color: #3b459a; font-weight: 600; font-size: 3rem; font-family: 'Lucida Grande', 'Montserrat', 'Roboto', monospace;\\">TradeMachine</h1>
        <h2>CREATOR_TEAM requested a trade with you:</h2>
        <div class=\\"divider\\"></div>
        <h3>CREATOR_TEAM would receive:</h3>
        <ul class=\\"picks\\" style=\\"margin-top: initial !important; margin-bottom: initial !important;\\"></ul>
        <li>Squirtle Squad's 2020 1st round Low Minors pick (#12) from RECIPIENT_TEAM</li>
        <hr>
        <h3>RECIPIENT_TEAM would receive:</h3>
        <ul class=\\"majors\\" style=\\"margin-top: initial !important; margin-bottom: initial !important;\\"></ul>
        <li>Honus Wiener (Pirates - C, 1B) from CREATOR_TEAM</li>
        <ul class=\\"minors\\" style=\\"margin-top: initial !important; margin-bottom: initial !important;\\"></ul>
        <li>MiniMe (Jays - P - Low Minors) from CREATOR_TEAM</li>
        <hr>
        <div class=\\"button-container\\"><a class=\\"button-link\\" href=\\"http://localhost:8080/trade/test-uuid/accept\\" style=\\"background-color: #3b459a; display: inline-block; border: 2px solid transparent; color: #fafafa; padding: calc(.375em - 1px) .75em; text-align: center; white-space: nowrap; cursor: pointer; border-radius: 4px; box-shadow: 0 1px 3px rgba(0, 0, 0, 0.4); font-size: 1rem; text-decoration: none; white-space: nowrap; height: 1.5em; vertical-align: top; line-height: 1.5; margin-right: 2rem !important;\\"><span>Accept Trade</span></a><a class=\\"button-link\\" href=\\"http://localhost:8080/trade/test-uuid/reject\\" style=\\"background-color: #3b459a; display: inline-block; border: 2px solid transparent; color: #fafafa; padding: calc(.375em - 1px) .75em; text-align: center; white-space: nowrap; cursor: pointer; border-radius: 4px; box-shadow: 0 1px 3px rgba(0, 0, 0, 0.4); font-size: 1rem; text-decoration: none; white-space: nowrap; height: 1.5em; vertical-align: top; line-height: 1.5; margin-right: 2rem !important;\\"><span>Reject Trade</span></a>
        </div>
      </div>
    </div>
    <footer style=\\"height: 5%; background: #4b528b; width: 75%; margin-left: auto; margin-right: auto;\\"></footer>
  </body>
</html>",
    "subject": "FlexFoxFantasy TradeMachine - Fantasy Baseball Trade Proposal from CREATOR_TEAM",
    "text": " TRADEMACHINE
CREATOR_TEAM REQUESTED A TRADE WITH YOU:
CREATOR_TEAM WOULD RECEIVE:

Squirtle Squad's 2020 1st round Low Minors pick (#12) from RECIPIENT_TEAM 
--------------------------------------------------------------------------------

RECIPIENT_TEAM WOULD RECEIVE:

Honus Wiener (Pirates - C, 1B) from CREATOR_TEAM 
MiniMe (Jays - P - Low Minors) from CREATOR_TEAM 
--------------------------------------------------------------------------------

Accept Trade [http://localhost:8080/trade/test-uuid/accept]Reject Trade
[http://localhost:8080/trade/test-uuid/reject]",
    "to": "test@example.com",
  },
}
`;

exports[`Emailer Class email snapshots sendTradeSubmissionEmail 1`] = `
Object {
  "envelope": Object {
    "from": "tradebot@flexfoxfantasy.com",
    "to": Array [
      "test@example.com",
    ],
  },
  "originalMessage": Object {
    "attachments": Array [],
    "from": "tradebot@flexfoxfantasy.com",
    "html": "<!DOCTYPE html PUBLIC \\"-//W3C//DTD XHTML 1.0 Strict//EN\\" \\"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd\\">
<html xmlns=\\"http://www.w3.org/1999/xhtml\\" style=\\"height: 100%; background: #f7f7f7;\\">
  <head>
    <meta charset=\\"utf-8\\">
    <meta name=\\"viewport\\" content=\\"width=device-width; initial-scale=1.0;\\">
    <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\">
    <meta name=\\"x-apple-disable-message-reformatting\\">
    
    <style>
@media screen and (max-width: 600px) {
  u + .body {
    width: 100vw !important;
  }
}
</style>
    <style>
a.button-link {
  background-color: #3b459a;
  display: inline-block;
  border: 2px solid transparent;
  color: #fafafa;
  padding: calc(.375em - 1px) .75em;
  text-align: center;
  white-space: nowrap;
  cursor: pointer;
  border-radius: 4px;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.4);
  font-size: 1rem;
  text-decoration: none;
  white-space: nowrap;
  height: 1.5em;
  vertical-align: top;
  line-height: 1.5;
}
@media only screen and (max-width:700px) {
  .main,
.header,
.footer {
    width: 100% !important;
  }

  .main .container h1 {
    font-size: 1.8rem !important;
  }

  a.button-link {
    margin: 1rem 0 !important;
    text-decoration: underline !important;
  }
}
</style>
    <style>
.button-container a.button-link {
  margin-right: 2rem !important;
}
</style>
    <title></title>
  </head>
  <body style=\\"font-family: -apple-system, BlinkMacSystemFont, Roboto, Helvetica, Arial, sans-serif; font-size: 16px; color: black; height: 100%; background: #f7f7f7;\\">
    <header class=\\"title\\" style=\\"height: 100px; background-color: #a9c07c; background-image: url('https://imgur.com/VKEupAm.jpg'); background-size: cover; background-position: center center; background-repeat: no-repeat; width: 75%; margin: auto;\\"></header>
    <div class=\\"main\\" style=\\"height: 80%; background: #fff; width: 75%; margin-left: auto; margin-right: auto;\\">
      <div class=\\"container\\" style=\\"width: 70%; margin-left: 10%; padding: 5% 0;\\">
        <h1 style=\\"line-height: initial; margin: 0.67em 0; padding: 0; color: #3b459a; font-weight: 600; font-size: 3rem; font-family: 'Lucida Grande', 'Montserrat', 'Roboto', monospace;\\">TradeMachine</h1>
        <h2>Your trade offer has been accepted by all recipients:</h2>
        <div>
          <h3>CREATOR_TEAM will receive:</h3>
          <ul class=\\"picks\\" style=\\"margin-top: 1em; margin-bottom: 2em;\\"></ul>
          <li>Squirtle Squad's 2020 1st round Low Minors pick (#12) from RECIPIENT_TEAM</li>
          <h3>RECIPIENT_TEAM will receive:</h3>
          <ul class=\\"majors\\" style=\\"margin-top: 1em; margin-bottom: 2em;\\"></ul>
          <li>Honus Wiener (Pirates - C, 1B) from CREATOR_TEAM</li>
          <ul class=\\"minors\\" style=\\"margin-top: 1em; margin-bottom: 2em;\\"></ul>
          <li>MiniMe (Jays - P - Low Minors) from CREATOR_TEAM</li>
        </div>
        <p style=\\"line-height: 1.6em; margin: 1em 0;\\">Upon submission of this trade, it will be announced in the <a href=\\"https://flexfoxfantasy.slack.com/archives/C84UJAX5Y\\" style=\\"text-decoration: none; border-bottom: #d3d6f0 1px solid; color: #2837b8 !important;\\">#trade_announcements</a> channel.</p>
        <div class=\\"button-container\\"><a class=\\"button-link\\" href=\\"http://localhost:8080/trade/test-uuid/submit\\" style=\\"background-color: #3b459a; display: inline-block; border: 2px solid transparent; color: #fafafa; padding: calc(.375em - 1px) .75em; text-align: center; white-space: nowrap; cursor: pointer; border-radius: 4px; box-shadow: 0 1px 3px rgba(0, 0, 0, 0.4); font-size: 1rem; text-decoration: none; white-space: nowrap; height: 1.5em; vertical-align: top; line-height: 1.5; margin-right: 2rem !important;\\"><span>Submit Trade</span></a></div>
      </div>
    </div>
    <footer style=\\"height: 5%; background: #4b528b; width: 75%; margin-left: auto; margin-right: auto;\\"></footer>
  </body>
</html>",
    "subject": "FlexFoxFantasy TradeMachine - Your Fantasy Baseball Trade Has Been Accepted!",
    "text": " TRADEMACHINE
YOUR TRADE OFFER HAS BEEN ACCEPTED BY ALL RECIPIENTS:
CREATOR_TEAM WILL RECEIVE:

Squirtle Squad's 2020 1st round Low Minors pick (#12) from RECIPIENT_TEAM 
RECIPIENT_TEAM WILL RECEIVE:

Honus Wiener (Pirates - C, 1B) from CREATOR_TEAM 
MiniMe (Jays - P - Low Minors) from CREATOR_TEAM Upon submission of this trade,
it will be announced in the #trade_announcements
[https://flexfoxfantasy.slack.com/archives/C84UJAX5Y] channel.

Submit Trade [http://localhost:8080/trade/test-uuid/submit]",
    "to": "test@example.com",
  },
}
`;
